--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -2,6 +2,20 @@ spring.application.name=users-api
 
 logging.level.org.springframework.jdbc=DEBUG
 
-spring.h2.console.enabled=true
+#datasource
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.generate-unique-name=false
 spring.datasource.name=usersDB
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+
+#h2
+# default path: h2-console
+spring.h2.console.path=/h2-ui
+spring.h2.console.enabled=true
