--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.application.name=users-api
 
-logging.level.org.springframework.jdbc=DEBUG
-
 #datasource
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.generate-unique-name=false
 spring.datasource.name=usersDB
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.username=sa
+spring.datasource.password=
 
 #jpa
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.open-in-view=false
 
 #h2
 # default path: h2-console
